MQA-257: Updated validations for SDL Number and OrgRegNo and refactored the code.