@@ -6,6 +6,7 @@ import java.util.Properties;
 import org.compiere.model.MClient;
 import org.compiere.model.MMailText;
 import org.compiere.model.MUser;
+import org.compiere.model.Query;
 import org.compiere.util.DB;
 
 import za.co.ntier.api.model.MBPartner_New;
@@ -13,51 +14,58 @@ import za.co.ntier.api.model.MBPartner_New;
 public class MZZSDRTempBranch extends X_ZZ_SDR_Temp_Branch {
 	
     private static final String TEMP_BRANCH_MAILTEXT_UU = "05011c3b-c1db-4241-8f11-a595598bb742";
-    public static final String COLUMNNAME_ZZ_DocStatus = "ZZ_DocStatus";
-    public static final String DOCSTATUS_Completed = "CO";
 
 	public MZZSDRTempBranch(Properties ctx, int ZZ_SDR_Temp_Branch_ID, String trxName) {
 		super(ctx, ZZ_SDR_Temp_Branch_ID, trxName);
-		// TODO Auto-generated constructor stub
 	}
 
 	public MZZSDRTempBranch(Properties ctx, int ZZ_SDR_Temp_Branch_ID, String trxName, String... virtualColumns) {
 		super(ctx, ZZ_SDR_Temp_Branch_ID, trxName, virtualColumns);
-		// TODO Auto-generated constructor stub
 	}
 
 	public MZZSDRTempBranch(Properties ctx, String ZZ_SDR_Temp_Branch_UU, String trxName) {
 		super(ctx, ZZ_SDR_Temp_Branch_UU, trxName);
-		// TODO Auto-generated constructor stub
 	}
 
 	public MZZSDRTempBranch(Properties ctx, String ZZ_SDR_Temp_Branch_UU, String trxName, String... virtualColumns) {
 		super(ctx, ZZ_SDR_Temp_Branch_UU, trxName, virtualColumns);
-		// TODO Auto-generated constructor stub
 	}
 
 	public MZZSDRTempBranch(Properties ctx, ResultSet rs, String trxName) {
 		super(ctx, rs, trxName);
-		// TODO Auto-generated constructor stub
 	}
 
 	@Override
 	protected boolean beforeSave(boolean newRecord) {
-		// TODO Auto-generated method stub
 		  if (newRecord) {
 
 		        String orgRegNo = getZZ_Organisation_Reg_No();
 		        String branchName = getZZ_BranchName();
 		        String docNo = getValue();
+		        String sdlNumber = getZZ_SDL_No();
 
-		        // 1) Check parent org exists
-		        int parentBP = DB.getSQLValueEx(get_TrxName(),
-		            "SELECT c_bpartner_id FROM c_bpartner WHERE referenceno=?",
-		            orgRegNo);
-		        if (parentBP <= 0) {
-		            log.saveError("Error", "Organisation not registered with MQA.");
-		            return false;
-		        }
+				// 1a) Check if Organisation Registration No is already registered
+				int countRegNo = DB.getSQLValueEx(	get_TrxName(),
+													"SELECT COUNT(*) FROM c_bpartner WHERE referenceno=?",
+													orgRegNo);
+				if (countRegNo > 0)
+				{
+					log.saveError("Error", "Organisation already registered with MQA. Please check Registration No.");
+					return false;
+				}
+
+				// 1b) Check if SDL Number is already registered
+				if (sdlNumber != null && !sdlNumber.isBlank())
+				{
+					int countSdl = DB.getSQLValueEx(get_TrxName(),
+													"SELECT COUNT(*) FROM c_bpartner WHERE zz_sdl_no=?",
+													sdlNumber);
+					if (countSdl > 0)
+					{
+						log.saveError("Error", "Business Partner already exists with this SDL Number.");
+						return false;
+					}
+				}
 
 		        // 2) Branch name uniqueness
 		        int count = DB.getSQLValueEx(get_TrxName(),
@@ -69,7 +77,7 @@ public class MZZSDRTempBranch extends X_ZZ_SDR_Temp_Branch {
 		        }
 
 		        // 3) Check DocumentNo uniqueness
-		        if (docNo != null && !docNo.trim().isEmpty()) {
+		        if (docNo != null && !docNo.isBlank()) {
 		            int cntDoc = DB.getSQLValueEx(get_TrxName(),
 		                "SELECT COUNT(*) FROM c_bpartner WHERE value=?",
 		                docNo);
@@ -85,21 +93,24 @@ public class MZZSDRTempBranch extends X_ZZ_SDR_Temp_Branch {
 
 	@Override
 	protected boolean afterSave(boolean newRecord, boolean success) {
-		// TODO Auto-generated method stub
 		 if (!success)
 		        return false;
 
 		    if (is_ValueChanged(COLUMNNAME_ZZ_DocStatus)
-		        && DOCSTATUS_Completed.equals(getZZ_DocStatus()))
+		        && ZZ_DOCSTATUS_Completed.equals(getZZ_DocStatus()))
 		    {
 		        Object oldStatus = get_ValueOld(COLUMNNAME_ZZ_DocStatus);
 
-		        if (oldStatus == null || !DOCSTATUS_Completed.equals(oldStatus)) {
+		        if (oldStatus == null || !ZZ_DOCSTATUS_Completed.equals(oldStatus)) {
 
-		            if (getC_BPartner_ID() > 0) {
-		                log.info("Branch BP already created: " + getC_BPartner_ID());
-		                return true;
-		            }
+					if (getC_BPartner_ID() > 0)
+					{
+						if (!is_ValueChanged("C_BPartner_ID"))
+						{
+							log.info("Branch BP already created: " + getC_BPartner_ID());
+						}
+						return true;
+					}
 
 		            int bpID = createBranchBusinessPartner();
 
@@ -123,22 +134,13 @@ public class MZZSDRTempBranch extends X_ZZ_SDR_Temp_Branch {
 
 	    String orgRegNo = getZZ_Organisation_Reg_No();
 
-	    // Parent organisation BP
-	    int parentBP = DB.getSQLValueEx(get_TrxName(),
-	        "SELECT c_bpartner_id FROM c_bpartner WHERE referenceno=?",
-	        orgRegNo);
-
-	    if (parentBP <= 0) {
-	        log.severe("Parent Organisation not found for reg no " + orgRegNo);
-	        return 0;
-	    }
-
 	    MBPartner_New bp = new MBPartner_New(getCtx(), 0, get_TrxName());
 
 	    bp.setValue(getValue());         // temporary levy number as search key
 	    bp.setName(getZZ_BranchName());       // branch name
 	    bp.setName2(getZZ_TradingAs());       // branch trading name
 	    bp.setReferenceNo(orgRegNo);          // parent organisation reference
+	    bp.setZZ_SDL_No(getZZ_SDL_No());      // SDL number
 	    bp.setIsCustomer(true);
 	    bp.setIsVendor(true);
 
@@ -147,7 +149,7 @@ public class MZZSDRTempBranch extends X_ZZ_SDR_Temp_Branch {
 	    bp.setC_BP_Group_ID(bpGroupID);
 
 	    // SDR flag
-	    bp.set_ValueOfColumn("zz_issdruser", "Y");
+	    bp.setZZ_IsSDRUser(true);
 
 	    if (!bp.save()) {
 	        log.severe("Failed to save Branch BP");
@@ -169,39 +171,39 @@ public class MZZSDRTempBranch extends X_ZZ_SDR_Temp_Branch {
 	
 
 	private void sendBranchEmail(MClient client, int bpID) {
-	    String sql = "SELECT email FROM ad_user WHERE c_bpartner_id=? LIMIT 1";
+	    String sql = "SELECT email FROM ad_user WHERE c_bpartner_id=? AND isactive='Y' ORDER BY created DESC";
 	    String to = DB.getSQLValueStringEx(get_TrxName(), sql, bpID);
-	    if (to == null || to.trim().isEmpty()) return;
+	    if (to == null || to.isBlank()) return;
 
-	    int mailTextID = DB.getSQLValueEx(get_TrxName(),
-	        "SELECT r_mailtext_id FROM r_mailtext WHERE r_mailtext_uu=?",
-	        TEMP_BRANCH_MAILTEXT_UU);
+	    MMailText mText = new Query(getCtx(), MMailText.Table_Name, "r_mailtext_uu=?", get_TrxName())
+	            .setParameters(TEMP_BRANCH_MAILTEXT_UU)
+	            .firstOnly();
+	    if (mText == null) return;
 
-	    MMailText mText = new MMailText(getCtx(), mailTextID, get_TrxName());
 	    String message = mText.getMailText(true);
 
         // Safe values (no nulls)
         String contactName = getContactName() != null ? getContactName() : "";
         String orgName     = OrganisationName();
-        String searchKey = getValue() != null ? getValue() : "";
+        String searchKey   = getValue() != null ? getValue() : "";
+        
         // Replace tokens
         message = message.replace("@ContactName@", contactName)
-                      .replace("@OrganisationName@", orgName)
-                      .replace("@SearchKey@", searchKey);
+                         .replace("@OrganisationName@", orgName)
+                         .replace("@SearchKey@", searchKey);
 
-	    String subject = "Temporary Org Branch Registration Complete: " + getZZ_BranchName() +
-	                     " (" + getValue() + ")";
+	    String subject = String.format("Temporary Org Branch Registration Complete: %s (%s)", 
+	                                   getZZ_BranchName(), searchKey);
 
 	    client.sendEMail(to, subject, message, null, true);
 	}
 	
 	public String OrganisationName()
 	{
-		int bpID = DB.getSQLValueEx(get_TrxName(),
-		        "SELECT c_bpartner_id FROM c_bpartner WHERE referenceno=?", 
+		String orgName = DB.getSQLValueStringEx(get_TrxName(),
+		        "SELECT name FROM c_bpartner WHERE referenceno=? AND isactive='Y'", 
 		        getZZ_Organisation_Reg_No());
-		MBPartner_New bp = new MBPartner_New(getCtx(), bpID, get_TrxName());
-		return bp.getName();
+		return orgName != null ? orgName : "";
 	}
 	
 	public String getContactName()
